:sparkles: Add NEW_CLIENT event
